<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_capture_photo"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_photo"
        android:shortcutShortLabel="@string/shortcut_photo_short"
        android:shortcutLongLabel="@string/shortcut_photo_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.orbit.spatialjournal"
            android:targetClass="com.orbit.spatialjournal.MainActivity"
            android:data="orbit://capture?type=photo" />
    </shortcut>
    <shortcut
        android:shortcutId="quick_capture_voice"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_voice"
        android:shortcutShortLabel="@string/shortcut_voice_short"
        android:shortcutLongLabel="@string/shortcut_voice_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.orbit.spatialjournal"
            android:targetClass="com.orbit.spatialjournal.MainActivity"
            android:data="orbit://capture?type=voice" />
    </shortcut>
    <shortcut
        android:shortcutId="quick_capture_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_note"
        android:shortcutShortLabel="@string/shortcut_note_short"
        android:shortcutLongLabel="@string/shortcut_note_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.orbit.spatialjournal"
            android:targetClass="com.orbit.spatialjournal.MainActivity"
            android:data="orbit://capture?type=note" />
    </shortcut>
</shortcuts>
